Reference root line-height

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -3,7 +3,7 @@
   @extend %link-underline-removal;
 
   $r: $ratio-text-small;
-  $h: rem($r * $line-height);
+  $h: rem($r * $line-height-root-content);
 
   font-size: rem($r);
   position: relative;
