--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -32,7 +32,7 @@
       text-align: left;
 
       &::before {
-        $m: ((rem($line-height) - $width-border-decorative-border) / 2);
+        $m: ((rem($line-height-root-content) - $width-border-decorative-border) / 2);
 
         margin-bottom: $m;
         padding-top: $m;
