Keep First Heading bottom white spaces based on font size

--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -1,7 +1,10 @@
 // First Heading
 .first-heading {
-  font-size: rem($ratio-text-large);
+  $r: $ratio-text-large;
+
+  font-size: rem($r);
   line-height: $line-height-first-heading;
+  margin-bottom: ($margin * $r);
 
   @media (min-width: $breakpoint-content) {
     font-size: rem($ratio-text-first-heading-content);
