--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -83,7 +83,7 @@ blockquote {
   @extend %margin;
 
   border-left: $width-border-blockquote solid $color-border-blockquote;
-  color: $color-fg-blockquote;
+  color: $color-dark-light;
   padding-left: $padding-left-blockquote;
 }
 
@@ -136,7 +136,6 @@ figcaption {
 
   blockquote + & {
     border-left: $width-border-blockquote solid $color-border-blockquote;
-    color: $color-fg-blockquote;
     padding-left: $padding-left-blockquote;
     padding-top: $margin;
 
@@ -245,7 +244,7 @@ table {
   @extend %margin;
   @include font-feature-settings("tnum" 1);
 
-  border-bottom: $width-border-small solid $color-border-table;
+  border-bottom: $width-border-table solid $color-border-table;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
@@ -261,7 +260,7 @@ table {
 
 %table-cell,
 td {
-  border-top: $width-border-small solid $color-border-table;
+  border-top: $width-border-table solid $color-border-table;
   padding: $padding-large;
   vertical-align: top;
   white-space: nowrap;
