--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -5,9 +5,6 @@ $ratio: 1.7;
 // Text Size
 $ratio-text-primary: 1;
 $ratio-text-secondary: (24px / 16px);
-
-
-// Harmonic Ratio
 $ratio-text: $ratio-text-primary;
 $ratio-text-minimal: ($ratio-text-secondary / pow($ratio, 2));
 $ratio-text-tiny: ($ratio-text-primary / $ratio);
@@ -19,22 +16,42 @@ $ratio-text-enormous: ($ratio-text-primary * pow($ratio, 2));
 $ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
 
 
+// Line Height
+$line-height: $ratio;
+$line-height-minimal: ($line-height * .7);
+$line-height-tiny: ($line-height * .8);
+$line-height-small: ($line-height * .9);
+$line-height-large: ($line-height * 1.05);
+$line-height-huge: ($line-height * 1.1);
+$line-height-gargantuan: ($line-height * 1.2);
+
+
 // Column
 $ratio-content: 1;
 $ratio-supplement: (1 / pow($ratio, 2));
 
 
 // Placeholder Class
+$line-height-heading: $line-height-tiny;
+
 $ratio-text-footing: $ratio-text-small;
+$line-height-footing: ($line-height-heading / $ratio-text-footing);
+
+
+// Core
+$line-height-root: $line-height-small;
+$line-height-root-content: $line-height;
 
 
 // Global Header
 $ratio-text-logo: $ratio-text;
+$line-height-logo: $line-height-gargantuan;
 
 
 // Content
 $ratio-text-first-heading-content: $ratio-text-huge;
 $ratio-text-first-heading-full: $ratio-text-gargantuan;
+$line-height-first-heading: $line-height-minimal;
 
 
 // Global Footer
