--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -1,11 +1,3 @@
-// Line Height
-$line-height: $ratio;
-$line-height-minimal: ($line-height * .7);
-$line-height-tiny: ($line-height * .8);
-$line-height-small: ($line-height * .9);
-$line-height-large: ($line-height * 1.05);
-
-
 // Margin
 $margin: rem($ratio);
 $margin-minimal: ($margin / pow($ratio, 3));
@@ -58,7 +50,7 @@ $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
 
 
 // Breakpoint
-$width-scrollbar: 1.5rem;
+$width-scrollbar: 2rem;
 $breakpoint-content: ($width-content-outer + $width-scrollbar);
 $breakpoint-full: ($width-full-outer + $width-scrollbar);
 
@@ -68,26 +60,20 @@ $padding-side-centering: $width-gap-small;
 
 $margin-bottom-decorative-border: $margin-tiny;
 $width-border-decorative-border: $width-border-large;
-$height-decorative-border: $margin-bottom-decorative-border + $width-border-decorative-border + $margin-bottom-decorative-border;
+$height-decorative-border: ($margin-bottom-decorative-border + $width-border-decorative-border + $margin-bottom-decorative-border);
 
 $margin-side-expander: (- $padding-side-centering);
-
-$line-height-heading: $line-height-tiny;
 
 $width-protrusion-full: $width-supplement;
 
 $width-border-search-form-query: $width-border-small;
 $height-search-form-query: (1rem + ($width-border-search-form-query + $padding-large) * 2);
-$width-search-form-button: percentage(1 / 4);
+$width-search-form-button: percentage(1 / $ratio / $ratio);
 
-$line-height-footing: ($line-height-heading / $ratio-text-footing);
 $height-footing: rem($line-height-footing * $ratio-text-footing);
 
 
 // Core
-$line-height-root: $line-height-small;
-$line-height-root-content: $line-height;
-
 $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
@@ -95,13 +81,14 @@ $width-border-blockquote: $width-border-large;
 
 $padding-left-list: $indent;
 
+$width-border-table: $width-border-small;
+
 
 // Global Header
-$height-logo: rem($ratio-text-logo * 2);
+$height-logo: rem($ratio-text-logo * $line-height-logo);
 
 
 // Content
-$line-height-first-heading: $line-height-minimal;
 $height-first-heading-content: rem($line-height-first-heading * $ratio-text-first-heading-content);
 $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
 
