--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -3,7 +3,7 @@
   color: $color-dark-light;
   font-size: rem($ratio-text-logo);
   height: $height-logo;
-  line-height: $height-logo;
+  line-height: $line-height-logo;
   margin-bottom: 0;
   margin-top: 0;
   text-transform: uppercase;
