--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,9 +1,11 @@
 // Site Navigation
 .site-navigation {
+  $r: $ratio-text-tiny;
+
   flex-basis: 0;
   flex-grow: 1;
   font-size: rem($ratio-text-tiny);
-  line-height: $height-logo;
+  line-height: ($line-height-logo / $r);
   text-transform: uppercase;
 
   ul {
