Optimize Search Form button width

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -68,7 +68,7 @@ $width-protrusion-full: $width-supplement;
 
 $width-border-search-form-query: $width-border-small;
 $height-search-form-query: (1rem + ($width-border-search-form-query + $padding-large) * 2);
-$width-search-form-button: percentage(1 / $ratio / $ratio);
+$width-search-form-button: percentage(1 / pow($ratio, 3));
 
 $height-footing: rem($line-height-footing * $ratio-text-footing);
 
