Add year to Weblog category page
This does not close `ol` element, be sure to fix them.

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -14,13 +14,17 @@
           <h1 class="first-heading">{{short_title}}</h1>
 
           <p>以下は2002年より始まったこのウェブログの$categories::titleに関する記事だけの時系列順のリストになります。</p>
-
-          <hr>
-
-          <ol class="posts">
       </?>
 
 <!-- blosxom date -->
+      <?$categories::enabled eq="1">
+        </section>
+
+        <section>
+          <h1 class="hanged"><time>$yr</time></h1>
+
+          <ol class="posts">
+      </?>
 
 <!-- blosxom story -->
       <article>
