--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -61,6 +61,6 @@
 
 <!-- blosxom categories_story -->
 <li>
-  <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@num.strip_leading_zeros>, $yr</time></div>
+  <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@num.strip_leading_zeros></time></div>
   <a href="$url$path/$fn.$default_flavour">$title</a>
 </li>
