Control pre based on body text line height
3 lines of pre === 2 lines of p

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -65,13 +65,16 @@ pre {
   @extend %margin;
   @include font-feature-settings("zero" 1);
 
+  $r: $ratio-text-small;
+
   clear: both;
   font-family: $font-stack-monospace;
-  font-size: 1em;
-  line-height: $line-height-tiny;
+  font-size: rem($r);
+  line-height: ($line-height-root * 2 / 3 / $r);
   overflow: auto;
 
   @media (min-width: $breakpoint-content) {
+    line-height: ($line-height-root-content * 2 / 3 / $r);
     overflow: visible;
     overflow-wrap: break-word;
     white-space: pre-wrap;
