Fix Site Navigation height on medium+ screen

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -35,7 +35,9 @@
   }
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text-small);
+    $r: $ratio-text-small;
+    font-size: rem($r);
+    line-height: ($line-height-logo / $r);
 
     li {
       margin-left: $width-gap;
