--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -18,12 +18,9 @@ $ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
 
 // Line Height
 $line-height: $ratio;
-$line-height-minimal: ($line-height * .7);
 $line-height-tiny: ($line-height * .8);
 $line-height-small: ($line-height * .9);
-$line-height-large: ($line-height * 1.05);
-$line-height-huge: ($line-height * 1.1);
-$line-height-gargantuan: ($line-height * 1.2);
+$line-height-large: ($line-height * 1.2);
 
 
 // Column
@@ -45,13 +42,13 @@ $line-height-root-content: $line-height;
 
 // Global Header
 $ratio-text-logo: $ratio-text;
-$line-height-logo: $line-height-gargantuan;
+$line-height-logo: $line-height-large;
 
 
 // Content
 $ratio-text-first-heading-content: $ratio-text-huge;
 $ratio-text-first-heading-full: $ratio-text-gargantuan;
-$line-height-first-heading: $line-height-minimal;
+$line-height-first-heading: $line-height-tiny;
 
 
 // Global Footer
