--- a/src/css/_debug.scss
+++ b/src/css/_debug.scss
@@ -60,8 +60,8 @@
       $c $width-gap-small,
       $c ($width-gap-small + $width-supplement),
       $g ($width-gap-small + $width-supplement),
-      $g ($width-gap-small + $width-supplement + $width-gap-large),
-      $c ($width-gap-small + $width-supplement + $width-gap-large),
+      $g ($width-gap-small + $width-supplement + $width-gap),
+      $c ($width-gap-small + $width-supplement + $width-gap),
       $c ($width-gap-small + $width-full),
       $g ($width-gap-small + $width-full),
       $g $width-full-outer
