--- a/src/css/class/_centering.scss
+++ b/src/css/class/_centering.scss
@@ -7,6 +7,6 @@
   padding-right: $padding-side-centering;
 
   @media (min-width: $breakpoint-full) {
-    padding-left: ($width-gap-small + $width-supplement + $width-gap-large);
+    padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
