--- a/src/css/class/_protrusion.scss
+++ b/src/css/class/_protrusion.scss
@@ -1,7 +1,7 @@
 // Protrusion
 %protrusion {
   @media (min-width: $breakpoint-full) {
-    margin-right: $width-gap-large;
+    margin-right: $width-gap;
     position: absolute;
     right: 100%;
     width: $width-protrusion-full;
