--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -12,6 +12,6 @@
 
   @media (min-width: $breakpoint-full) {
     font-size: rem($ratio-text-first-heading-full);
-    margin-left: (- ($width-supplement + $width-gap-large));
+    margin-left: (- ($width-supplement + $width-gap));
   }
 }
