--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -16,7 +16,7 @@
 
   li {
     display: block;
-    margin-left: $width-gap-tiny;
+    margin-left: $width-gap-small;
     text-align: right;
 
     &:first-child {
@@ -45,11 +45,11 @@
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-left: $width-gap-large;
+    margin-left: $width-gap;
 
     li {
       margin-left: 0;
-      margin-right: $width-gap-large;
+      margin-right: $width-gap;
 
       &:first-child {
         flex-grow: 0;
