--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -35,9 +35,7 @@ $column-gap: rem($ratio);
 
 // Main Component
 $width-gap: $column-gap;
-$width-gap-tiny: ($width-gap / pow($ratio, 2));
 $width-gap-small: ($width-gap / 2);
-$width-gap-large: ($width-gap * $ratio);
 
 $width-content: $column;
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
@@ -45,7 +43,7 @@ $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 $width-supplement: ($width-content / $ratio-content * $ratio-supplement);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
 
-$width-full: ($width-supplement + $width-gap-large + $width-content);
+$width-full: ($width-supplement + $width-gap + $width-content);
 $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
 
 
