--- a/src/css/widget/_drop.scss
+++ b/src/css/widget/_drop.scss
@@ -7,8 +7,8 @@
   @media (min-width: $breakpoint-full) {
     float: left;
     margin-bottom: $margin-minimal;
-    margin-left: (- ($width-supplement + $width-gap-large));
+    margin-left: (- ($width-supplement + $width-gap));
     margin-right: $width-gap-small;
-    max-width: ($width-supplement + $width-gap-large + $width-content / 2);
+    max-width: ($width-supplement + $width-gap + $width-content / 2);
   }
 }
