--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -23,7 +23,7 @@
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-left: (- ($width-supplement + $width-gap-large));
+    margin-left: (- ($width-supplement + $width-gap));
 
     figcaption {
       bottom: auto;
