--- a/src/css/widget/_hanged.scss
+++ b/src/css/widget/_hanged.scss
@@ -1,7 +1,7 @@
 // Hanged
 .hanged {
   @media (min-width: $breakpoint-full) {
-    margin-right: $width-gap-large;
+    margin-right: $width-gap;
     margin-top: 0;
     position: absolute;
     right: 100%;
