Define column based on line height

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -29,8 +29,8 @@ $padding-gargantuan: ($padding * 4);
 
 
 // Column
-$column: rem(remove-unit(pow(16px * $ratio-text * $line-height, 2) / 16px) * .875);
-$column-gap: rem($ratio);
+$column: rem(pow($line-height, 7));
+$column-gap: rem($line-height);
 
 
 // Main Component
