Control Sidenote based on root line height
4 lines of Sidenote = 3 lines of p

--- a/src/css/widget/_sidenote.scss
+++ b/src/css/widget/_sidenote.scss
@@ -2,8 +2,15 @@
 .sidenote {
   @extend %protrusion;
 
+  $r: $ratio-text-small;
+
   color: $color-dark-light;
-  font-size: rem($ratio-text-small);
+  font-size: rem($r);
+  line-height: ($line-height-root * 3 / 4 / $r);
+
+  @media (min-width: $breakpoint-full) {
+    line-height: ($line-height-root-content * 3 / 4 / $r);
+  }
 
   @media (min-width: $breakpoint-full) {
     text-align: left;
