--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -9,7 +9,7 @@
     {{> global-header}}
 
     <main class="content" role="main">
-      <?$categories::enabled eq="1">
+      <?$categories::is_category_page eq="1">
         <section>
           <h1 class="first-heading">{{short_title}}</h1>
 
@@ -17,7 +17,7 @@
       </?>
 
 <!-- blosxom date -->
-      <?$categories::enabled eq="1">
+      <?$categories::is_category_page eq="1">
           </ol>
         </section>
 
@@ -48,7 +48,7 @@
       </article>
 
 <!-- blosxom foot -->
-      <?$categories::enabled eq="1">
+      <?$categories::is_category_page eq="1">
           </ol>
         </section>
       </?>
