--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -9,5 +9,5 @@
 {{/home}}
 
 <link href="/styles/common.min.css" media="screen" rel="stylesheet">
-<link href="/styles/{{#home}}home{{/home}}{{#documents}}documents{{/documents}}{{#weblog}}{{#weblog_child}}<?$categories::enabled ne="1">permalink</?><?$categories::enabled eq="1">weblog</?>{{/weblog_child}}{{^weblog_child}}weblog{{/weblog_child}}{{/weblog}}{{#about}}about{{/about}}.min.css" media="screen" rel="stylesheet">
+<link href="/styles/{{#home}}home{{/home}}{{#documents}}documents{{/documents}}{{#weblog}}{{#weblog_child}}<?$categories::is_category_page ne="1">permalink</?><?$categories::is_category_page eq="1">weblog</?>{{/weblog_child}}{{^weblog_child}}weblog{{/weblog_child}}{{/weblog}}{{#about}}about{{/about}}.min.css" media="screen" rel="stylesheet">
 <link href="/styles/print.min.css" media="print" rel="stylesheet">
