Fix repository URL

--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -1,6 +1,6 @@
 /*!
  * style-guide.css
- * https://github.com/hail2u/hail2u.net-styles
+ * https://github.com/hail2u/hail2u.net
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
