--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -10,7 +10,7 @@
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}" rel="prerender">
-              <footer class="section-footer">
+              <footer class="section-footer at-home">
                 <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                   · <span class="tag">{{category}}</span></p>
               </footer>
