Control Site Navigation position with float

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -2,9 +2,9 @@
 .section-footer {
   @extend %link-underline-removal;
 
+  float: left;
   font-size: rem($ratio-text-site-navigation);
-  position: relative;
-  top: $top-site-navigation;
+  width: 100%;
 
   p {
     margin-bottom: 0;
@@ -13,10 +13,12 @@
   @media (min-width: $breakpoint-content) {
     float: right;
     margin-left: $width-gap;
-    top: $top-site-navigation-content;
+    position: relative;
+    top: (($height-first-heading-content - $height-site-navigation) / 2);
+    width: auto;
   }
 
   @media (min-width: $breakpoint-full) {
-    top: $top-site-navigation-full;
+    top: (($height-first-heading-full - $height-site-navigation) / 2);
   }
 }
