Update hiding elements

--- a/src/css/print.scss
+++ b/src/css/print.scss
@@ -10,10 +10,7 @@ aside,
 nav,
 hr::before,
 .site-navigation,
-.byline::before,
-.icon-list,
-.seealso::before,
-.topic .section-footer + p::after {
+.footlinks {
   display: none;
 }
 
