--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -21,7 +21,7 @@
 
 // Content
 @import "content";
-@import "content/sections";
+@import "content/section";
 @import "content/section-footer";
 @import "content/first-heading";
 
