--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -10,7 +10,7 @@
 
     <main class="content" role="main">
       <?$categories::is_category_page eq="1">
-        <section>
+        <section class="section">
           <h1 class="first-heading">{{short_title}}</h1>
 
           <p>以下は2002年より始まったこのウェブログの$categories::titleに関する記事だけの時系列順のリストになります。</p>
@@ -21,14 +21,14 @@
           </ol>
         </section>
 
-        <section>
+        <section class="section">
           <h1 class="hanged"><time>$yr</time></h1>
 
           <ol class="posts">
       </?>
 
 <!-- blosxom story -->
-      <article>
+      <article class="section">
         <footer class="section-footer">
           <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@num.strip_leading_zeros>, $yr</time>
             · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
