--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -6,13 +6,13 @@
     {{> global-header}}
 
     <main class="content" role="main">
-      <section>
+      <section class="section">
         <h1 class="first-heading">{{short_title}}</h1>
 
         <p>2003年ごろより、独立した形で参照してもらいたい文書やチュートリアルを書き、公開しています。他に翻訳や様々なデータの表なども作成しています。以下はそれらの一覧になります。</p>
       </section>
 
-      <section id="on-2015">
+      <section id="on-2015" class="section">
         <h1 class="hanged"><time>2015</time></h1>
 
         <ol class="posts">
@@ -20,7 +20,7 @@
         </ol>
       </section>
 
-      <section id="on-2014">
+      <section id="on-2014" class="section">
         <h1 class="hanged"><time>2014</time></h1>
 
         <ol class="posts">
@@ -31,7 +31,7 @@
         </ol>
       </section>
 
-      <section id="on-2013">
+      <section id="on-2013" class="section">
         <h1 class="hanged"><time>2013</time></h1>
 
         <ol class="posts">
@@ -45,7 +45,7 @@
         </ol>
       </section>
 
-      <section id="on-2012">
+      <section id="on-2012" class="section">
         <h1 class="hanged"><time>2012</time></h1>
 
         <ol class="posts">
@@ -55,7 +55,7 @@
         </ol>
       </section>
 
-      <section id="on-2011">
+      <section id="on-2011" class="section">
         <h1 class="hanged"><time>2011</time></h1>
 
         <ol class="posts">
@@ -67,7 +67,7 @@
         </ol>
       </section>
 
-      <section id="on-2009">
+      <section id="on-2009" class="section">
         <h1 class="hanged"><time>2009</time></h1>
 
         <ol class="posts">
@@ -77,7 +77,7 @@
         </ol>
       </section>
 
-      <section id="on-2008">
+      <section id="on-2008" class="section">
         <h1 class="hanged"><time>2008</time></h1>
 
         <ol class="posts">
@@ -85,7 +85,7 @@
         </ol>
       </section>
 
-      <section id="upto-2007">
+      <section id="upto-2007" class="section">
         <h1 class="hanged">～ <time>2007</time></h1>
 
         <ol class="posts">
