--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content" role="main">
       {{#articles}}
-        <section id="latest-article" class="topic">
+        <section id="latest-article" class="section topic">
           {{#first}}
             <a href="{{link}}" rel="prerender">
               <footer class="section-footer">
@@ -24,7 +24,7 @@
           {{/first}}
         </section>
 
-        <section id="recent-articles">
+        <section id="recent-articles" class="section">
           <h1 class="hanged">最近の記事</h1>
 
           <ol class="posts">
