Remove unnecessary child selectors

--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -27,18 +27,18 @@
       white-space: nowrap;
     }
 
-    .info {
-      line-height: ($lh * $r / $r-info);
-      margin-left: $width-gap-small;
-      order: 1;
-    }
-
-    li > a {
+    .title {
       display: block;
       flex-basis: 0;
       flex-grow: 1;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+
+    .info {
+      line-height: ($lh * $r / $r-info);
+      margin-left: $width-gap-small;
+      order: 1;
     }
   }
 }
