--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -32,7 +32,7 @@
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                   · <span class="tag"><a href="./blog/{{cat}}/">{{category}}</a></span></div>
-                <a href="{{link}}">{{{title}}}</a>
+                <a class="title" href="{{link}}">{{{title}}}</a>
               </li>
             {{/item}}
           </ol>
