Override bottom white space in its context
If blockquote and table used inside figure, their bottom white spaces
should be removed because unnecessary white spaces appers between they
and figcaption.

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -79,6 +79,11 @@ blockquote {
   border-left: $width-border-blockquote solid $color-border-blockquote;
   color: $color-dark-light;
   padding-left: $padding-left-blockquote;
+
+  figure > &,
+  > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 ul,
@@ -115,11 +120,6 @@ dd {
 figure {
   @extend %margin;
   @extend %positioning-root;
-
-  > :nth-last-child(2),
-  > :nth-last-child(2) > :last-child {
-    margin-bottom: 0;
-  }
 }
 
 figcaption {
@@ -246,6 +246,10 @@ table {
   max-width: 100%;
   overflow-x: auto;
   table-layout: fixed;
+
+  figure > & {
+    margin-bottom: 0;
+  }
 
   @media not screen {
     display: table;
