Unprefix font-feature-settings property

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,9 +1,7 @@
 // Root
 :root {
-  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
-  @include font-feature-settings("kern" 1, "lnum" 1, "pnum" 1);
-
   font-family: $font-stack-sans-serif;
+  font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   font-size: percentage($ratio-text);
   line-height: $line-height-root;
 
@@ -52,14 +50,12 @@ hr {
 }
 
 pre {
-  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @extend %margin;
-  @include font-feature-settings("zero" 1);
-
   $r: $ratio-text-small;
 
   clear: both;
   font-family: $font-stack-monospace;
+  font-feature-settings: "zero" 1;
   font-size: rem($r);
   line-height: ($line-height-root * 2 / 3 / $r);
   overflow: auto;
@@ -185,10 +181,8 @@ code,
 var,
 samp,
 kbd {
-  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
-  @include font-feature-settings("zero" 1);
-
   font-family: $font-stack-monospace;
+  font-feature-settings: "zero" 1;
   font-size: 1em;
 
   p &::before,
@@ -234,15 +228,14 @@ video {
 
 // Tabular Data
 table {
-  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @extend %margin;
-  @include font-feature-settings("tnum" 1);
 
   border-bottom: $width-border-table solid $color-border-table;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
   display: inline-block;
+  font-feature-settings: "tnum" 1;
   max-width: 100%;
   overflow-x: auto;
   table-layout: fixed;
