Flatten natural.scss

--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -15,22 +15,31 @@ $monospace: "Menlo", "Consolas", monospace;
 $width: 45em;
 
 
-// Imports
-@import "../../node_modules/hail2u-scss-partials/clearfix";
-@import "../../node_modules/hail2u-scss-partials/natural";
-
-
-// Styles
+// Sections
 body {
+  background-color: $light;
+  color: $dark;
+  font: #{$font-size}/1.75 $sans-serif;
   margin: $font-size;
   max-width: $width;
+
+  @media (min-width: ($font-size * 28)) {
+    margin: ($font-size * 2);
+  }
+
+  @media (min-width: ($font-size * 52)) {
+    margin-top: ($font-size * 4);
+  }
 }
 
+h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+  margin: ($font-size * 2) 0 0;
+
   &:target {
     padding-top: $font-size;
   }
@@ -40,39 +49,163 @@ h6 {
   }
 }
 
+
+// Grouping content
+p {
+  margin: ($font-size * 2) 0 0;
+}
+
+hr {
+  border-bottom: 3px double darken($light, 30%);
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  height: 0;
+  margin: ($font-size * 2) auto 0;
+  width: 50%;
+}
+
 pre {
+  background-color: darken($light, 3%);
+  font: #{($font-size * .875)}/1.25 $monospace;
+  margin: ($font-size * 2) 0 0;
+  padding: $font-size;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
 
-blockquote,
+blockquote {
+  margin: ($font-size * 2) 0 0 ($font-size * 2);
+}
+
 blockquote + figcaption {
   margin-left: ($font-size * 2);
 }
 
-table {
-  display: block;
-  max-width: 100%;
-  overflow-x: auto;
-  table-layout: fixed;
+ol,
+ul {
+  margin: ($font-size * 2) 0 0;
+  padding-left: ($font-size * 2.5);
+
+  ol,
+  ul {
+    margin-top: 0;
+  }
 }
 
-td,
+dl {
+  margin: ($font-size * 2) 0 0;
+
+  dl {
+    margin: 0;
+  }
+}
+
+dd {
+  margin-left: ($font-size * 2.5);
+}
+
+
+// Text-level semantics
+a {
+  color: $link;
+}
+
+em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+strong {
+  color: $stress;
+  font-weight: bold;
+}
+
+q:before {
+  content: '\201C\0020';
+}
+
+q:after {
+  content: '\0020\201D';
+}
+
+abbr,
+acronym {
+  border-bottom: 1px dotted $dark;
+  cursor: help;
+}
+
+code,
+var,
+samp {
+  font-family: $monospace;
+}
+
+
+// Edits
+ins {
+  border-bottom: 3px double lighten($dark, 15%);
+  text-decoration: none;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+
+// Embedded content
+img {
+  box-sizing: border-box;
+  height: auto;
+  max-width: 100%;
+}
+
+
+// Tabular data
+table {
+  margin: ($font-size * 2) 0 0;
+}
+
 th {
+  background-color: darken($light, 15%);
+  border: 1px solid darken($light, 45%);
+  color: $dark;
+  display: block;
+  font-weight: bold;
+  max-width: 100%;
+  overflow-x: auto;
+  padding: ($font-size / 2);
+  table-layout: fixed;
+  text-align: left;
   white-space: nowrap;
 }
 
+td {
+  background-color: darken($light, 3%);
+  border: 1px solid darken($light, 45%);
+  color: $dark;
+  padding: ($font-size / 2);
+  white-space: nowrap;
+}
+
+
+// Styles
 .note {
   border-left: 3px double $stress;
   padding-left: $font-size;
 }
 
 .image {
-  @include clearfix;
-
   line-height: 1;
   margin: ($font-size * 2) 0 0;
   max-width: 100%;
+  zoom: 1;
+
+  &:after {
+    clear: both;
+    content: "";
+    display: block;
+  }
 }
 
 .seealso {
@@ -115,10 +248,14 @@ $breakpoint: ($font-size + $indent + $width + $font-size);
 
 
 // Print
-@import "../../node_modules/hail2u-scss-partials/black-prints";
-
 @media print {
-  @include black-prints;
+  * {
+    background-color: transparent !important;
+    background-image: none !important;
+    box-shadow: none !important;
+    color: #000 !important;
+    text-shadow: none !important;
+  }
 
   body {
     background-color: inherit;
