--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -1,3 +1,22 @@
+/*!
+ * debug.css
+ * https://github.com/hail2u/hail2u.net
+ *
+ * Licensed under MIT: http://hail2u.mit-license.org/2011
+ */
+
+// Function
+@import "../../node_modules/hail2u-scss-functions/number/pow";
+@import "../../node_modules/hail2u-scss-functions/number/rem";
+
+
+// Variable
+@import "var/font";
+@import "var/color";
+@import "var/ratio";
+@import "var/size";
+
+
 // Show Column
 .show-column::before {
   $c: rgb(255, 0, 255);
