Set text size separately

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -3,7 +3,7 @@
   @extend %link-underline-removal;
 
   float: left;
-  font-size: rem($ratio-text-site-navigation);
+  font-size: rem($ratio-text-small);
   width: 100%;
 
   p {
