--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -69,17 +69,17 @@ pre {
   background-color: darken($light, 3%);
   font: #{($font-size * .875)}/1.25 $monospace;
   margin: ($font-size * 2) 0 0;
-  padding: $font-size;
   overflow-wrap: break-word;
+  padding: $font-size;
   word-wrap: break-word;
 }
 
 blockquote {
   margin: ($font-size * 2) 0 0 ($font-size * 2);
-}
 
-blockquote + figcaption {
-  margin-left: ($font-size * 2);
+  + figcaption {
+    margin-left: ($font-size * 2);
+  }
 }
 
 ol,
@@ -121,12 +121,12 @@ strong {
   font-weight: bold;
 }
 
-q:before {
-  content: '\201C\0020';
+q::before {
+  content: "\201C\0020";
 }
 
-q:after {
-  content: '\0020\201D';
+q::after {
+  content: "\0020\201D";
 }
 
 abbr,
@@ -201,7 +201,7 @@ td {
   max-width: 100%;
   zoom: 1;
 
-  &:after {
+  &::after {
     clear: both;
     content: "";
     display: block;
@@ -250,11 +250,13 @@ $breakpoint: ($font-size + $indent + $width + $font-size);
 // Print
 @media print {
   * {
+    // scss-lint:disable all
     background-color: transparent !important;
     background-image: none !important;
     box-shadow: none !important;
     color: #000 !important;
     text-shadow: none !important;
+    // scss-lint:enable all
   }
 
   body {
