Import Sass functions as raw partials

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -6,8 +6,8 @@
  */
 
 // Function
-@import "../../node_modules/hail2u-scss-functions/number/pow";
-@import "../../node_modules/hail2u-scss-functions/number/rem";
+@import "function/pow";
+@import "function/rem";
 
 
 // Variable
