--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,10 +6,9 @@
  */
 
 // Function
-@import "../../node_modules/hail2u-scss-functions/color/encode-color";
-@import "../../node_modules/hail2u-scss-functions/number/pow";
-@import "../../node_modules/hail2u-scss-functions/number/rem";
-@import "../../node_modules/hail2u-scss-functions/number/remove-unit";
+@import "function/encode-color";
+@import "function/pow";
+@import "function/rem";
 
 
 // Variable
