--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -1,2 +1,3 @@
 <script async src="/scripts/unutm.min.js"></script>
 <script defer src="/scripts/ellipsis-title.min.js"></script>
+<script defer src="/scripts/wrapfix.min.js"></script>
