--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -19,17 +19,18 @@ body {
 }
 
 h1 {
-  @extend %heading;
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
 
   font-size: rem($ratio-text-huge);
+  font-weight: normal;
+  line-height: $line-height-tiny;
   margin: $margin-top-h1 0 $margin;
 }
 
 
 // Grouping Content
 p {
-  @extend %margin;
+  @extend %white-spaces;
 }
 
 hr {
@@ -50,7 +51,7 @@ hr {
 }
 
 pre {
-  @extend %margin;
+  @extend %white-spaces;
   $r: $ratio-text-small;
 
   clear: both;
@@ -70,7 +71,7 @@ pre {
 }
 
 blockquote {
-  @extend %margin;
+  @extend %white-spaces;
 
   border-left: $width-border-blockquote solid $color-border-blockquote;
   color: $color-dark-light;
@@ -84,7 +85,7 @@ blockquote {
 
 ul,
 ol {
-  @extend %margin;
+  @extend %white-spaces;
 
   padding-left: $padding-left-list;
 
@@ -95,7 +96,7 @@ ol {
 }
 
 dl {
-  @extend %margin;
+  @extend %white-spaces;
 
   dl {
     margin-bottom: 0;
@@ -114,7 +115,7 @@ dd {
 }
 
 figure {
-  @extend %margin;
+  @extend %white-spaces;
   @extend %positioning-root;
 }
 
@@ -228,7 +229,7 @@ video {
 
 // Tabular Data
 table {
-  @extend %margin;
+  @extend %white-spaces;
 
   border-bottom: $width-border-table solid $color-border-table;
   border-collapse: collapse;
@@ -269,6 +270,10 @@ th {
 
 
 // Forms
+form {
+  @extend %white-spaces;
+}
+
 :-ms-input-placeholder {
   color: inherit;
   opacity: .54;
