--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -1,7 +1,7 @@
 // Global Footer
 .global-footer {
   @extend %centering;
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
   @extend %positioning-root;
 
   font-size: rem($ratio-text-global-footer);
