--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,7 +1,7 @@
 // Global Header
 .global-header {
   @extend %centering;
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
   @extend %positioning-root;
 
   display: flex;
