--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -1,6 +1,6 @@
 // Section Footer
 .section-footer {
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
 
   float: left;
   font-size: rem($ratio-text-small);
