--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,14 +21,10 @@
 // Placeholder Class
 @import "class/centering";
 @import "class/decorative-border";
-@import "class/expander";
-@import "class/heading";
-@import "class/margin";
+@import "class/indistinguishable-link";
 @import "class/positioning-root";
 @import "class/protrusion";
-
-@import "class/footing";
-@import "class/link-underline-removal";
+@import "class/white-spaces";
 
 
 // Core
