--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -1,6 +1,9 @@
 // Fill
 .fill {
-  @extend %expander;
+  $m: (- $padding-side-centering);
+
+  margin-left: $m;
+  margin-right: $m;
 
   img,
   video,
@@ -10,7 +13,7 @@
   }
 
   figcaption {
-    margin-left: (- $margin-side-expander);
+    margin-left: (- $m);
   }
 
   @media (min-width: $breakpoint-content) {
