--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -1,6 +1,6 @@
 // Posts
 .posts {
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
 
   $lh: $line-height-tiny;
   $r: $ratio-text-large;
