--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -1,6 +1,6 @@
 // Share Buttons
 .share-buttons {
-  @extend %link-underline-removal;
+  @extend %indistinguishable-link;
   @extend %protrusion;
 
   ul {
