Separate Topic with 3 wavy dashes

--- a/src/css/widget/_topic.scss
+++ b/src/css/widget/_topic.scss
@@ -9,4 +9,13 @@
   .more {
     color: $color-fg-a;
   }
+
+  &::after {
+    color: $color-dark-light;
+    content: "〰〰〰";
+    display: block;
+    font-size: rem($ratio-text-huge);
+    margin: $margin-large 0;
+    text-align: center;
+  }
 }
