--- a/src/css/class/_centering.scss
+++ b/src/css/class/_centering.scss
@@ -3,8 +3,8 @@
   margin-left: auto;
   margin-right: auto;
   max-width: $width-content;
-  padding-left: $padding-side-centering;
-  padding-right: $padding-side-centering;
+  padding-left: $width-gap-small;
+  padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-full) {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
