--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -40,7 +40,7 @@
 
   @media (min-width: $breakpoint-content) {
     position: absolute;
-    right: $padding-side-centering;
+    right: $width-gap-small;
     top: ($padding-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2);
     width: $width-supplement;
     z-index: 1;
