Place Decorative Border relatively

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -127,6 +127,7 @@ figcaption {
 
   blockquote + & {
     border-left: $width-border-blockquote solid $color-border-blockquote;
+    margin-top: 0;
     padding-left: $padding-left-blockquote;
     padding-top: $margin;
 
