--- a/src/css/class/_decorative-border.scss
+++ b/src/css/class/_decorative-border.scss
@@ -1,11 +1,15 @@
 // Decorative Border
 %decorative-border {
+  @extend %positioning-root;
+
+  margin-top: $margin;
+
   &::before {
-    border-bottom: $width-border-decorative-border solid $color-light-dark;
+    border-top: $width-border-large solid $color-light-dark;
     content: "";
     display: block;
-    margin-bottom: $margin-bottom-decorative-border;
-    padding-top: $margin-bottom-decorative-border;
+    position: absolute;
+    top: (- $margin-tiny);
     width: ($width-supplement / pow($ratio, 3));
   }
 }
