--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -2,8 +2,6 @@
 .site-search {
   @extend %positioning-root;
 
-  top: $padding-top-byline;
-
   input {
     -webkit-appearance: none;
     border-radius: 0;
@@ -41,7 +39,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $width-gap-small;
-    top: ($padding-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2);
+    top: ((rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2);
     width: $width-supplement;
     z-index: 1;
   }
