Increase Site Search bottom white spaces on small screen

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -2,6 +2,8 @@
 .site-search {
   @extend %positioning-root;
 
+  margin-bottom: $margin-large;
+
   input {
     -webkit-appearance: none;
     border-radius: 0;
@@ -37,6 +39,7 @@
   }
 
   @media (min-width: $breakpoint-content) {
+    margin-bottom: 0;
     position: absolute;
     right: $width-gap-small;
     top: ((rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2);
