Don’t add next keyword that not next

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -4,7 +4,7 @@
 
 {{#home}}
   {{#articles}}
-    {{#first}}<link href="{{link}}" rel="next prerender">{{/first}}
+    {{#first}}<link href="{{link}}" rel="prerender">{{/first}}
   {{/articles}}
 {{/home}}
 
