--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -9,7 +9,7 @@
       {{#articles}}
         {{#first}}
           <section id="latest-article" class="section topic">
-            <a href="{{link}}" rel="next prerender">
+            <a href="{{link}}" rel="prerender">
               <footer class="section-footer">
                 <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                   · <span class="tag">{{category}}</span></p>
